[gd_scene load_steps=4 format=2]

[ext_resource path="res://Weapons/weapon.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
icon = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 10, 0 )
texture = ExtResource( 3 )

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 66, 0 )
rotation = 1.5708

[node name="Cooldown" type="Timer" parent="."]
one_shot = true

[node name="PickupZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupZone"]
shape = SubResource( 1 )
disabled = true

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
